# deep-researcher

./: README.md  pyproject.toml
src/deep_researcher/: __init__.py  __main__.py  agent.py  cache.py  config.py  constants.py  errors.py  llm.py  models.py  orchestrator.py  prompts.py  report.py
src/deep_researcher/tools/: __init__.py  arxiv_search.py  base.py  categorize.py  core_search.py  cross_analysis.py  crossref.py  enrichment.py  exa_search.py  ieee_xplore.py  openalex.py  pubmed.py  scholar_search.py  scopus.py  semantic_scholar.py  synthesize.py
tests/: test_agent.py  test_cache.py  test_config.py  test_models.py  test_orchestrator.py  test_pipeline_tools.py  test_tool_base.py
